<resources>
    <string name="app_name">USIRooms</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Strings related to By Event -->
    <string name="room_event"> Room SI-006 </string>
    <string name="building_event"> Black Building \n First floor </string>
    <string name="room_specs"> Projector: yes \nCapacity: 60 people </string>
    <string name="time_event"> 15:00-16:00 </string>
    <string name="name_event">CSS LIVE</string>

    <!-- Lorem ipsum placeholder for the event description -->
    <string name="event_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ultricies in erat id egestas. Duis vel lorem vitae odio fringilla accumsan at et ligula. Phasellus vestibulum, ligula ut ultricies egestas, enim elit viverra quam, a vulputate sem metus vel orci. Vestibulum varius tincidunt nibh id consectetur. Duis in hendrerit tortor. Maecenas sed arcu lacus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin dictum leo scelerisque turpis congue, ut fringilla ante pulvinar. Integer quam mi, efficitur vitae feugiat eget, condimentum id velit. Aliquam erat volutpat. Morbi non eleifend nulla, feugiat vulputate magna. Vivamus iaculis nisi nisi, nec condimentum mauris vulputate in. Aliquam lorem risus, convallis quis metus ac, interdum auctor lorem. Fusce id lorem iaculis elit varius fermentum. Cras ac lectus non risus rhoncus eleifend.</string>
    <string name="event_holder_room">This event takes place in room SI-006</string>

    <!--Set your favorite Building-->
    <string-array name="spinnerStrings">
        <item> Main Building </item>
        <item> Black Building </item>
        <item> Red Building </item>
    </string-array>

    <string-array name="room_blackbuilding">
        <item>Room SI-003</item>
        <item>Room SI-004</item>
        <item>Room SI-006</item>
        <item>Room SI-007</item>
        <item>Room SI-008</item>
        <item>Room SI-013</item>
        <item>Room SI-015</item>
    </string-array>

    <string-array name="room_mainbuilding">
        <item>Room 120</item>
        <item>Room 128</item>
        <item>Room 156</item>
        <item>Room 159</item>
        <item>Room 250</item>
        <item>Room 253</item>
        <item>Room 254</item>
        <item>Room 354</item>
        <item>Room 355</item>
    </string-array>

    <string-array name="room_redbuilding">
        <item>Room A11</item>
        <item>Room A12</item>
        <item>Room A13</item>
        <item>Room A14</item>
        <item>Room A21</item>
        <item>Room A22</item>
        <item>Room A23</item>
        <item>Room A24</item>
        <item>Room A31</item>
        <item>Room A32</item>
        <item>Room A33</item>
        <item>Room A34</item>
    </string-array>
    <string name="title_activity_event_white">EventWhite</string>
    <string name="title_activity_on_boarding">OnBoarding</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="status">The room is free until 16:00</string>
    
    
    <!--On-Boarding-->
    <string name="name_app">USIRooms</string>
    <string name="subtitle">Room info just a touch away</string>
    <string name="free_rooms">Free Rooms</string>
    <string name="free_rooms_sub">Empty rooms available on the go</string>
    <string name="by_event">By Event</string>
    <string name="by_event_sub">Check out what happens in the campus day by day</string>
    <string name="by_room">By Room</string>
    <string name="by_room_sub">Here you can find all the rooms you need</string>
    <string name="nav_explain">Navigation View</string>
    <string name="nav_explain_sub">Select your favourite building</string>



</resources>
