<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent"
    android:background="#ffffff">


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/Card_View_byRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        card_view:cardCornerRadius="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="65dp"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            style="@style/CardView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name_event"
                android:text="@string/name_event"
                android:textSize="25sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Room_event"
                android:text="@string/room_event"
                android:textSize="15sp"
                android:layout_alignBaseline="@+id/time_room"
                android:layout_alignBottom="@+id/time_room"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time_room"
                android:text="@string/time_event"
                android:textSize="15sp"
                android:layout_below="@+id/name_event"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/building_event"
                android:text="@string/building_event"
                android:textSize="15sp"
                android:layout_above="@+id/Room_event"
                android:layout_alignRight="@+id/Room_event"
                android:layout_alignEnd="@+id/Room_event" />



        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>